# AiDetectLib

./: CMakeLists.txt  README.md
src/: DetectFaceDNN.cpp  DetectFaceDNN.h  DetectFaceFactory.h  DetectFaceHog.cpp  DetectFaceHog.h  DetectFaceMod.cpp  DetectFaceMod.h  DetectFaceOpenCV.cpp  DetectFaceOpenCV.h  DetectFaces.cpp  DetectFaces.h  IDetectFace.h
